--- a/index.css
+++ b/index.css
@@ -20,6 +20,9 @@ body {
 .logo-brand {
     height: 80px;
 }
+.about-image-1 {
+    width: 20rem;
+}
 .nav-link {
     margin-right: 1em !important;
 }
@@ -28,6 +31,17 @@ body {
 }
 .navbar-collapse {
     justify-content: flex-end;
+}
+.table-container {
+    margin: 1em;
+}
+.table-text {
+max-width: 15em
+}
+.table-row, .header-text, .header-row, .table-text{
+    padding-left: 1em;
+    padding-right: 1em;
+
 }
 .header {
     background-image: url('images/voco muster RGB-01.png');
