--- a/index.css
+++ b/index.css
@@ -162,3 +162,16 @@ body {
         margin: 0;
     }
 }
+/*button for ita/its page*/
+button {
+    background-color: white;
+    color: black;
+    border: black 1px solid;
+    border-radius: 5px;
+}
+
+/*oppeaine*/
+#oppeaine {
+    display: flex;
+    justify-content: space-between;
+}
